[tool.poetry]
name = "reactant"
version = "0.3.0"
description = "Generate code for models, views, and urls based on Python type annotations."
authors = ["Neil Van <nvq.alino@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.0.1"
pydantic = "^1.8.2"
black = "^21.8b0"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
Django = "^3.2.7"
peewee = "^3.14.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
reactant  = "reactant.run:runner"